--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -359,6 +359,22 @@
             android:name=".Activity.wfys.picking.FyPickingActivity"
             android:screenOrientation="portrait"
             android:windowSoftInputMode="adjustPan" />
+        <activity
+            android:name=".Activity.wfys.KccxActivity"
+            android:screenOrientation="portrait"
+            android:windowSoftInputMode="adjustPan" />
+        <activity
+            android:name=".Activity.wfys.db.KjdbKcActivity"
+            android:screenOrientation="portrait"
+            android:windowSoftInputMode="adjustPan" />
+        <activity
+            android:name=".Activity.wfys.BjplActivity"
+            android:screenOrientation="portrait"
+            android:windowSoftInputMode="adjustPan" />
+        <activity
+            android:name=".Activity.wfys.YsGlgxjlActivity"
+            android:screenOrientation="portrait"
+            android:windowSoftInputMode="adjustPan" />
         <!--<receiver android:name=".Activity.printerB3s.BluetoothConnectActivityReceiver" >-->
         <!--<intent-filter android:priority="1000">-->
         <!--<action android:name="android.bluetooth.device.action.PAIRING_REQUEST" />-->
